tests/regression/error/hw5_error07.nex
fun f()
{
}
   print (1 + f());
   print (":n");
